# taskiq-flow

./: .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.fr.md  CHANGELOG.md  README.fr.md  README.md  SECURITY.fr.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml
.githooks/: pre-commit  pre-commit.bat
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: doc_release.yml  llms-doc.yml  release.yml  sync-changelog.yml  test.yml
.kilo/plans/: 1777453745865-shiny-planet.md  1777642225468-neon-star.md  1777741374854-quiet-circuit.md
archive/: README.md
docs/: Gemfile  README.md  _config.yml
docs/_en/: index.md  quickstart.md
docs/_en/api/: cache.md  core.md  decorators.md  execution.md  index.md  optimization.md  storage.md  tracking.md  websocket.md
docs/_en/examples/: api-example.md  dag_visualization_demo.md  dataflow-audio-pipeline.md  index.md  nicegui-dag-demo.md  quickstart.md  registry-discovery.md  resource_aware_demo.md  retry_demo.md  scheduled-pipeline.md  secure_api_example.md  tracking-demo.md  websocket-demo.md
docs/_en/guides/: api.md  cache.md  core-concepts.md  dataflow.md  execution.md  index.md  installation.md  migration.md  performance.md  pipelines.md  renderer_registry.md  retry.md  scheduling.md  security.md  tasks.md  tracking.md  websocket.md
docs/_fr/: index.md  quickstart.md
docs/_fr/api/: cache.md  core.md  decorators.md  execution.md  index.md  optimization.md  storage.md  tracking.md  websocket.md
docs/_fr/examples/: api-example.md  dag_visualization_demo.md  dataflow-audio-pipeline.md  index.md  nicegui-dag-demo.md  quickstart.md  registry-discovery.md  resource_aware_demo.md  retry_demo.md  scheduled-pipeline.md  secure_api_example.md  tracking-demo.md  websocket-demo.md
docs/_fr/guides/: api.md  cache.md  core-concepts.md  dataflow.md  execution.md  index.md  installation.md  performance.md  (+8 more)
docs/en/: quickstart.md
docs/fr/: quickstart.md
examples/: __init__.py  api_example.py  dag_visualization_demo.py  dataflow_audio_pipeline.py  nicegui_dag_demo.py  quickstart.py  registry_discovery_example.py  resource_aware_demo.py  retry_demo.py  scheduled_pipeline.py  secure_api_example.py  tracking_demo.py  websocket_demo.py
scripts/: add-api-permalinks.ps1  add-example-permalinks.ps1  add-front-matter-v2.ps1  add-front-matter.ps1  bump-version.ps1  fix-docs-links.ps1  fix-github-owner.ps1  fix-permalinks.ps1  generate_llm_docs.py  install-hooks.ps1  release-version.ps1  remove-layout.ps1  rename-collections.ps1  update-docs.ps1  update-uvlock-version.ps1  version_updater.py
taskiq_flow/: __init__.py  abc.py  api.py  config.py  constants.py  dag_builder.py  decorators.py  errors.py  exceptions.py  execution_engine.py  logging_config.py  middleware.py  pipeline.py  pipeliner.py  profiling.py  registry.py  serialization.py  shared_tasks.py
taskiq_flow/api/: __init__.py  core.py
taskiq_flow/broker/: __init__.py  adapter.py  detector.py
taskiq_flow/cache/: __init__.py  memory.py  redis.py
taskiq_flow/dataflow/: __init__.py  cache.py  dag.py  node.py  registry.py
taskiq_flow/hooks/: __init__.py  bridge.py  bridge_picows.py  events.py  manager.py
taskiq_flow/integration/: __init__.py
taskiq_flow/map_reduce/: __init__.py  map.py  reduce.py
taskiq_flow/metrics/: __init__.py  collector.py  middleware.py
taskiq_flow/middlewares/: __init__.py  cache.py  retry.py  storage.py
taskiq_flow/optimization/: __init__.py  parallel.py
taskiq_flow/scheduling/: __init__.py  scheduler.py  storage.py  triggers.py
taskiq_flow/security/: __init__.py  audit.py  auth.py  authorization.py  dependencies.py  https.py  middleware.py  rate_limiting.py
taskiq_flow/steps/: __init__.py  branch.py  condition.py  filter.py  group.py  mapper.py  reduce.py  sequential.py
taskiq_flow/storage/: __init__.py  base.py  factory.py  memory.py  redis.py  sqlite.py  utils.py
taskiq_flow/tracking/: __init__.py  factory.py  manager.py  memory_storage.py  models.py  redis_storage.py  storage.py
taskiq_flow/transport/: __init__.py  http_stream.py  redis_pubsub.py  websocket.py
taskiq_flow/utils/: __init__.py  context.py  parallel.py
taskiq_flow/visualization/: __init__.py  dag_visualizer.py  mermaid.py
taskiq_pipelines/: __init__.py  abc.py  exceptions.py  middleware.py  pipeliner.py
taskiq_pipelines/broker/: __init__.py  adapter.py  detector.py
taskiq_pipelines/hooks/: __init__.py  bridge.py  events.py  manager.py
taskiq_pipelines/integration/: __init__.py
taskiq_pipelines/scheduling/: __init__.py  scheduler.py  triggers.py
taskiq_pipelines/steps/: __init__.py  branch.py  condition.py  filter.py  mapper.py  reduce.py  sequential.py
taskiq_pipelines/tracking/: __init__.py  factory.py  manager.py  memory_storage.py  models.py  redis_storage.py  storage.py
taskiq_pipelines/utils/: __init__.py  context.py  parallel.py
tests/: conftest.py  test_branch_step.py  test_cache_memory.py  test_cache_redis.py  test_condition_security.py  test_dag_builder_enhancements.py  test_dataflow.py  test_enhanced_decorators.py  test_factory.py  test_group_step.py  test_load_benchmark.py  test_map_reduce_advanced.py  test_map_reduce_pipeline.py  test_metrics.py  test_middlewares.py  test_pipeline_scheduler.py  test_reduce_step.py  test_scientific_serialization.py  test_security.py  test_steps.py  test_storage_memory.py  test_storage_redis.py  test_storage_sqlite.py  test_visualization.py
tests/test_broker/: test_detector_adapter.py
tests/test_e2e/: test_pipeline_execution.py
tests/test_hooks/: test_bridge.py  test_events.py  test_manager.py
tests/test_integration/: test_fastapi_websocket.py  test_tracking_hooks.py
tests/test_scheduling/: test_label_scheduler.py  test_scheduler.py  test_triggers.py
tests/test_steps/: test_branch.py  test_condition.py  test_filter.py  test_mapper.py  test_reduce.py  test_sequential.py
tests/test_tracking/: test_factory.py  test_memory_storage.py  test_models.py  test_redis_storage.py  test_storage.py  test_tracking_manager.py
tests/test_utils/: test_context.py  test_parallel.py
(+62 files in other folders)
