[project]
name = "taskiq-flow"
description = "Taskiq flow for task chaining."
readme = "README.md"
requires-python = ">=3.10,<4"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "David Orel", email = "d.orel@free.fr" }]
maintainers = [{ name = "David Orel", email = "d.orel@free.fr" }]
keywords = ["async", "distributed", "pipelines", "dataflow", "taskiq", "tasks"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Networking",
  "Typing :: Typed",
]
version = "0.2.0"
dependencies = [
  "apscheduler[sqlalchemy]>=3.11.2",
  "fastapi>=0.136.1",
  "mypy>=1.20.2",
  "networkx>=3.4.2",
  "picows>=1.19.0",
  "pydantic>=2,<3",
  "redis>=5.3.1",
  "taskiq>=0.11.12,<1",
  "taskiq-aio-kafka>=0.3.0",
  "taskiq-aio-pika>=0.6.0",
  "taskiq-redis>=1.0.9",
]

[project.optional-dependencies]
scheduler = ["apscheduler>=3.10,<4"]
redis = ["redis>=5.0,<6"]
all = ["apscheduler", "redis"]

[project.urls]
Homepage = "https://github.com/taskiq-python/taskiq-flow"
Repository = "https://github.com/taskiq-python/taskiq-flow"



[dependency-groups]
dev = [
  "anyio>=4",
  "black>=26.3.1",
  "mypy>=1.8,<2",
  "pre-commit>=4",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "pytest-xdist[psutil]>=3",
  "ruff>=0.15.0",
  "isort>=8.0.1",
  "mypy>=1.20.2",
]

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false
disallow_untyped_calls = false
pretty = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.ruff]
# List of enabled rulsets.
# See https://docs.astral.sh/ruff/rules/ for more information.
lint.select = [
  "E",  # Error
  "F",  # Pyflakes
  "W",  # Pycodestyle
  "C90",  # McCabe complexity
  "I",  # Isort
  "N",  # pep8-naming
  "D",  # Pydocstyle
  "ANN",  # Pytype annotations
  "S",  # Bandit
  "B",  # Bugbear
  "COM",  # Commas
  "C4",  # Comprehensions
  "ISC",  # Implicit string concat
  "PIE",  # Unnecessary code
  "T20",  # Catch prints
  "PYI",  # validate pyi files
  "Q",  # Checks for quotes
  "RSE",  # Checks raise statements
  "RET",  # Checks return statements
  "SLF",  # Self checks
  "SIM",  # Simplificator
  "PTH",  # Pathlib checks
  "ERA",  # Checks for commented out code
  "PL",  # PyLint checks
  "RUF",  # Specific to Ruff checks
  "UP",  # Pyupgrade
]
lint.ignore = [
  "D105",  # Missing docstring in magic method
  "D107",  # Missing docstring in __init__
  "D212",  # Multi-line docstring summary should start at the first line
  "D401",  # First line should be in imperative mood
  "D104",  # Missing docstring in public package
  "D100",  # Missing docstring in public module
  "ANN401",  # typing.Any are disallowed in `**kwargs
  "PLR0913",  # Too many arguments for function call
  "D106",  # Missing docstring in public nested class
  "SLF001",  # Private member accessed
  "COM812",  # Trailing comma conflicts with formatter
  "C901",  # Function is too complex
]
lint.mccabe = { max-complexity = 10 }
line-length = 88

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101",  # Use of assert detected
  "S301",  # Use of pickle detected
  "D103",  # Missing docstring in public function
  "SLF001",  # Private member accessed
  "S311",  # Standard pseudo-random generators are not suitable for security/cryptographic purposes
  "D101",  # Missing docstring in public class
  "COM812",  # Trailing comma conflicts with formatter
  "ANN001",  # Missing type annotation for function argument
  "ANN002",  # Missing type annotation for function
  "ANN003",  # Missing type annotation for return value
  "ANN201",  # Missing return type annotation for public function
  "ANN202",  # Missing return type annotation for private function
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "float"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["taskiq_dependencies.Depends", "taskiq.TaskiqDepends"]

[tool.pytest.ini_options]
anyio_mode = "auto"
