[project]
name = "taskiq-flow"
description = "Taskiq flow for task chaining."
readme = "README.md"
requires-python = ">=3.10,<4"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "David Orel", email = "d.orel@free.fr" }]
maintainers = [{ name = "David Orel", email = "d.orel@free.fr" }]
keywords = ["async", "distributed", "pipelines", "dataflow", "taskiq", "tasks"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Networking",
  "Typing :: Typed",
]
version = "0.4.0"
dependencies = [
  "apscheduler[sqlalchemy]>=3.11.2",
  "fastapi>=0.136.1",
  "mypy>=1.20.2",
  "networkx>=3.4.2",
  "picows>=1.19.0",
  "prometheus-client>=0.25.0",
  "pydantic>=2,<3",
  "pydantic-settings>=2.14.0",
  "redis>=5.3.1",
  "slowapi>=0.1.9",
  "taskiq>=0.11.12,<1",
  "taskiq-aio-kafka>=0.3.0",
  "taskiq-aio-pika>=0.6.0",
  "taskiq-redis>=1.0.9",
  "typos>=1.46.0",
  "uvicorn>=0.46.0",
]

[project.optional-dependencies]
scheduler = ["apscheduler>=3.10,<4"]
redis = ["redis>=5.0,<6"]
all = ["apscheduler", "redis"]

[project.urls]
Homepage = "https://github.com/taskiq-python/taskiq-flow"
Repository = "https://github.com/taskiq-python/taskiq-flow"
Documentation = "https://dorel14.github.io/taskiq-flow/"
Issues = "https://github.com/dorel14/taskiq-flow/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- CONFIGURATION HATCH (DISTRIBUTION) ---
[tool.hatch.build.targets.wheel]
packages = ["taskiq_flow"]

[tool.hatch.build.targets.sdist]
include = [
    "/taskiq_flow",
    "/README.md",
    "/LICENSE",
]

# --- CONFIGURATION SEMANTIC RELEASE V9 ---
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"

[tool.semantic_release.branches.master]
match = "master"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

# --- TES AUTRES CONFIGS (LINTING/TESTS) ---
[dependency-groups]
dev = [
  "anyio>=4",
  "mypy>=1.8,<2",
  "pre-commit>=4",
  "pytest>=9.0.3",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=7.1.0",
  "pytest-xdist[psutil]>=3",
  "ruff>=0.15.0",
  "isort>=8.0.1",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false
disallow_untyped_calls = false
pretty = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "C90", "I", "N", "D", "ANN", "S", "B", "COM", "C4", "ISC", "PIE", "T20", "PYI", "Q", "RSE", "RET", "SLF", "SIM", "PTH", "ERA", "PL", "RUF", "UP"]
lint.ignore = ["D105", "D107", "D212", "D401", "D104", "D100", "ANN401", "PLR0913", "PLR0911", "D106", "SLF001", "COM812", "C901"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S301", "D103", "SLF001", "S311", "D101", "COM812", "ANN001", "ANN002", "ANN003", "ANN201", "ANN202"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["asyncio: mark test as async"]